# tinyinfer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conv_example.cpp  get_weight.py
ann/: k2dnode.h  k2dtree.h
examples/: conv_example.cpp
flow/: CMakeLists.txt  matrix.h  optical_flow.cpp  optical_flow.h  vector.h
flow/resize/: fast_resize.cpp  fast_resize.h
flow/tests/: flow_test.cpp
models/alxenet/: conv1_b_0.npy  conv1_w_0.npy  conv2_b_0.npy  conv2_w_0.npy  conv3_b_0.npy  conv3_w_0.npy  conv5_b_0.npy  conv5_w_0.npy
models/mnist/: Parameter193_reshape1_shape.npy  Pooling160_Output_0_reshape0_shape.npy  input_0.npy  mnist-8.ti
scripts/: build_linux.sh  build_m1.sh  build_mac.sh
scripts/build-macos/: CMakeCache.txt  cmake_install.cmake
scripts/build-macos/CMakeScripts/: ReRunCMake.make
scripts/build-macos/Debug/mnist_test.app/Contents/MacOS/: mnist_test
scripts/build-macos/Release/mnist_test.app/Contents/: Info.plist
scripts/build-macos/Release/mnist_test.app/Contents/MacOS/: mnist_test
scripts/build-macos/TinyInfer.xcodeproj/: project.pbxproj
tests/: gemm_pp_unittest.cpp  mnist_unittest.cpp
tinyinfer/: convolution.h  lrn.h  max_pool.h  relu.h  tensor.h
tinyinfer/common/: base_layer.cpp  base_layer.h  check_macro.h  layer_factory.h  layer_type.h  tensor.cpp  tensor.h
tinyinfer/layer/: add.cpp  add.h  base_layer.cpp  base_layer.h  batch_normalization.cpp  batch_normalization.h  clip.cpp  clip.h  convolution.cpp  convolution.h  flatten.cpp  flatten.h  gemm.cpp  gemm.h  global_average_pool.cpp  global_average_pool.h  layer_factory.h  lrn.cpp  lrn.h  matmul.cpp  matmul.h  max_pool.cpp  max_pool.h  prelu.cpp  prelu.h  relu.cpp  relu.h  reshape.cpp  reshape.h  sigmoid.cpp  sigmoid.h  softmax.cpp  softmax.h
tinyinfer/layer/pp/: matmul_pp.h
tinyinfer/layer/pp/gemm/: CMakeLists.txt  gemm_pp.h  gemm_pp_block4x16_avx.cpp  gemm_pp_block4x16_nr_avx.cpp  gemm_pp_block4x4.cpp  gemm_pp_block4x4_sse.cpp  gemm_pp_block4x8_nr_sse.cpp  gemm_pp_block4x8_sse.cpp  gemm_pp_block8x4_sse.cpp  gemm_pp_block8x8_avx.cpp  gemm_pp_block8x8_sse.cpp  gemm_pp_unittest.cpp  gemm_ref.h
tinyinfer/layer/pp/im2col/: im2col.cpp  im2col.h
tinyinfer/layer/pp/matmul/: CMakeLists.txt  a.out  gemm_pp.h  gemm_pp_block.cpp  gemm_pp_block4x4_sse.cpp  gemm_pp_block4x8_sse.cpp  gemm_pp_unittest.cpp  matmul_pp.h  matmul_pp_unittest.cpp  matmul_ref.h
tinyinfer/net/: alexnet.cpp  alexnet.h  deserializer.h  graph.cpp  graph.h  mnist.cpp  net.cpp  net.h  serialize_macro.h  serializer.h
tinyinfer/reflection/: deserializer.h  serialize_macro.h  serializer.h
tools/: gflops.cpp  gflops.py  numpy_tensor.h  onnx2ti.py  test.cpp
